# tiktoka-studio-uploader-genius-app

./: .env  .gitattributes  .gitignore  1.json  2.json  README-zh.md  README.md  Trayicon.py  app.py  autovideo.py  autovideo.spec  autovideoV2.py  autovideo_csv.py  autovideo_en.py  autovideo_en.spec  build.md  build_collector.py  createzip.py  db-test.py  env.py  failed.py  fastapiserver.py  ffmpeg.md  index.html  index.py  jsonload-demo.py  latest-used-setting.txt  logwidget.py  main.py  main.spec  meta-json-docs.md  ok.py  onefile-example.py  people.db  py2exe.py  pyproject.toml  requirements-ext.txt  requirements.txt  settings.json  setup-mac.py  (+16 more)
.github/: cx_freez.yml
assets/: import-template-0901.xlsx  thumb.json  youtube-videos-meta-comments.json  youtube-videos-meta-full-comments.json  youtube-videos-meta-minimal.json  youtube-videos-meta.json  youtube-videos-mete-private.json
build-binaries/: pyoxidizer.sh  shiv.sh
docs/: build.md  fastapi.md  ffmpeg.md  freemusic.md  json-handle.md  peewee.md  proxy.md  release.md  task.md  thread.md  thumb.md
locales/: en.json  zh.json
make/: build_collector.py  pyoxidizer.bzl
screen-recording/: b03ddcc5-5e20-419f-81d5-45268d2acb04.webm
src/: Proxy-Network-Info.js  UploadSession.py  accountTablecrud.py  accountlistboxcrud.py  ai_detector.py  asyncEvent.py  autothumb.py  batchcap.py  bg_music.py  checkIp.py  collapsiblepane.py  comboxToolip.py  constants.py  cookie.py  database.py  dbmanipulation.py  geo_ip_locator.py  gpt_thumbnail.py  ipdns.py  loadlocales.py  log.py  logconsole.py  logsetting.py  musichelper.py  (+10 more)
(+233 files in other folders)
