[tool.poetry]
name = "uploadergenius"
version = "1.0.0"
description = "A swiss army knife for uploading videos"
authors = ["wanghaisheng <admin@tiktokastudio.com>"]
readme = "README.md"
homepage = "https://github.com/wanghaisheng/tiktoka-studio-uploader-genius"
repository = "https://github.com/wanghaisheng/tiktoka-studio-uploader-genius"
exclude = []
include = ["ug/assets/*", "ug/tests/*", "ug/locales/*", "ug/static/*"]
license = "BSD-2-Clause"
classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Social Media',
]
packages = [
    { include = "ug"}
]

[tool.poetry.scripts]
cme = 'ug.uploadergenius:main'
uploadergenius = 'ug.uploadergenius:main'

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.poetry.group.dev.dependencies]
flake8 = "*"
pylint = "*"
shiv = "*"
black = "^20.8b1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
